# adventofcode2025

./: .gitignore  CMakeLists.txt  main.cpp  main.h
src/: day1.cpp  day1.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  util.h
